# robotic-map-ros-node

./: CMakeLists.txt  README.md
src/: fakeRobot.cpp  main.cpp
